@@ -9,6 +9,12 @@
 
  Changes between 1.0.2r and 1.0.2s [xx XXX xxxx]
 
+  *) Change the default RSA, DSA and DH size to 2048 bit instead of 1024.
+     This changes the size when using the genpkey app when no size is given. It
+     fixes an omission in earlier changes that changed all RSA, DSA and DH
+     generation apps to use 2048 bits by default.
+     [Kurt Roeckx]
+
   *) Add FIPS support for Android Arm 64-bit
 
      Support for Android Arm 64-bit was added to the OpenSSL FIPS Object Module in
